[B][COLOR gold]v3.2.4[/COLOR][/B]
- Added Debrid-Link.fr to the supported torrents cache check services
- Further simplification of the sources fetching proccess/dialog
- Fixed busy dialog issue when backgroung progress dialog is selected

[B][COLOR gold]v3.2.3[/COLOR][/B]
- Fix torrent cache check not terminating if a debrid service is down
- Minor settings bug fix

[B][COLOR gold]v3.2.2[/COLOR][/B]
- Various under the hood changes

[B][COLOR gold]v3.2.1[/COLOR][/B]
- Fixed Trakt (re)auth when Kodi's ui language is other than English
- Other minor code tweaks

[B][COLOR gold]v3.2.0[/COLOR][/B]
- Added min quality setting
- Added option to remove uncached torrents from the source list
    They will still be listed if none cached found
- Simplified the sources fetching dialog
    The old implementation was sometimes freezing the dialog and/or the scraping process

[B][COLOR gold]v3.1.3[/COLOR][/B]
- Added support for some more debrid hosts
- Minor fixes

[B][COLOR gold]v3.1.2[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v3.1.1[/COLOR][/B]
- Fixed Library integration and Downloads for Kodi 19

[B][COLOR gold]v3.1.0[/COLOR][/B]
- Finalised compatibility with PY3/K19, while retaining PY2 compat using 'six' module
    - Both TheOath and the Oathscrapers package now work under Kodi 19
    - Only a couple scrapers have been converted till now
    - Local indicators don't work due to their dependency on Metahandler
- Fixed AllDebrid torrents cache check

[B][COLOR gold]v3.0.1[/COLOR][/B]
- Some more adjustments towards PY3/K19 compatibility

[B][COLOR gold]v3.0.0[/COLOR][/B]
- Initial work for Python 3 compatibility
- Other adjustments for Kodi 19
    (not quite there yet - will also have to ditch Metahandler if it
     won't be updated for py3/Kodi 19)

[B][COLOR gold]v2.3.0[/COLOR][/B]
- Cloudflare scraper update
- Player module updates

[B][COLOR gold]v2.2.9[/COLOR][/B]
- Added 'Decades' movies category

[B][COLOR gold]v2.2.8[/COLOR][/B]
- Cloudflare scraper update
