@@ -75,11 +75,3 @@ def chunks(l, n):
     for i in list(range(0, len(l), n)):
         yield l[i:i + n]
 
-
-def _size(siz):
-    if siz in ['0', 0, '', None]: return 0, ''
-    div = 1 if siz.lower().endswith(('gb', 'gib')) else 1024
-    float_size = float(re.sub('[^0-9|/.|/,]', '', siz.replace(',', '.'))) / div
-    str_size = str('%.2f GB' % float_size)
-    return float_size, str_size
-
